# Aeyon3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
engine/: CMakeLists.txt  settings.ini
engine/assets/shaders/: Skybox.shader  Standard.shader
engine/include/: Actor.hpp  Behavior.hpp  BehaviorMeta.hpp  BehaviorSystem.hpp  Bounds.hpp  BoxCollider.hpp  Camera.hpp  Collider.hpp  CollisionSystem.hpp  Color.hpp  Component.hpp  ECSException.hpp  Engine.hpp  FirstPersonController.hpp  FirstPersonSystem.hpp  Plane.h  Primitive.hpp  QuitEvent.hpp  Resource.hpp  ResourceCache.hpp  SDLWindow.hpp  Scene.hpp  SceneLoader.hpp  ShaderCache.hpp  Space.hpp  System.hpp  SystemLocator.hpp  TextureCache.hpp  Time.hpp  Transform.hpp  Types.hpp  UUID.hpp  Util.hpp  Window.hpp
engine/include/Audio/: AudioClip.hpp  AudioSource.hpp  AudioSystem.hpp
engine/include/ECS/: Component.hpp  ComponentHandle.hpp  ComponentHandleDetails.hpp  ComponentHandleInfo.hpp  ComponentID.hpp  ComponentInstance.hpp  ComponentStore.hpp  ComponentStoreBase.hpp  ComponentTypeIndex.hpp  ECRegister.hpp  ECRegistry.hpp  ECSException.hpp  Entity.hpp  EntityHandle.hpp  EntityHandleDetails.hpp  EntityHandleInfo.hpp  EntityID.hpp  EntityMap.hpp  EntityStore.hpp  Query.hpp  System.hpp  World.hpp
engine/include/Event/: CollisionEnterEvent.hpp  Event.hpp  EventSystem.hpp  QuitEvent.hpp  WindowResizeEvent.hpp
engine/include/GUI/: GUISystem.hpp
engine/include/Graphics/: Camera.hpp  FrameBuffer.hpp  Frustum.hpp  GraphicsSystem.hpp  IndexBuffer.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshRenderer.hpp  PixelFormat.hpp  PropertyVisitor.hpp  SDLWindow.hpp  Shader.hpp  ShaderOption.hpp  ShaderParser.hpp  ShaderProgram.hpp  ShaderProperty.hpp  Texture.hpp  Texture2D.hpp  TextureCube.hpp  VertexAttribute.hpp  VertexBuffer.hpp  Window.hpp  WindowResizeEvent.hpp
engine/include/Input/: Input.hpp  KeyAction.hpp  KeyChar.hpp  KeyCode.hpp  KeyMod.hpp  KeyboardEvent.hpp  MouseButton.hpp  SDLInput.hpp
engine/lib/: CMakeLists.txt
engine/lib/enum-flags/: CMakeLists.txt
engine/lib/glad/: CMakeLists.txt
engine/lib/glad/include/glad/: glad.h
engine/lib/glad/src/: glad.c
engine/lib/imgui/: CMakeLists.txt
engine/lib/pugixml/: CMakeLists.txt
engine/lib/sol/: CMakeLists.txt
engine/lib/sol/include/: sol.hpp
engine/lib/stb_image/: CMakeLists.txt  stb_image.cpp
engine/lib/stb_image/include/: stb_image.h
engine/lib/stb_vorbis/: CMakeLists.txt  stb_vorbis.c
engine/lib/stb_vorbis/include/: stb_vorbis.h
engine/lib/stduuid/: CMakeLists.txt
engine/lib/stduuid/include/: uuid.h
engine/materials/: CubeMat.material  GroundMat.material
engine/misc_excluded/: FrameBuffer.cpp  FrameBuffer.hpp
engine/src/: Actor.cpp  BehaviorSystem.cpp  Bounds.cpp  BoxCollider.cpp  Camera.cpp  Color.cpp  Component.cpp  Engine.cpp  Plane.cpp  SDLException.cpp  SDLWindow.cpp  Scene.cpp  SceneLoader.cpp  Time.cpp  Transform.cpp
engine/src/Audio/: AudioSystem.cpp
engine/src/ECS/: Component.cpp  ComponentInstance.cpp  ComponentTypeIndex.cpp  ECRegister.cpp  ECRegistry.cpp  ECSException.cpp  Entity.cpp  EntityHandle.cpp  EntityHandleDetails.cpp  EntityMap.cpp  EntityStore.cpp  System.cpp  World.cpp
engine/src/Event/: Event.cpp  EventSystem.cpp
engine/src/Graphics/: Camera.cpp  FrameBuffer.cpp  Frustum.cpp  GraphicsSystem.cpp  IndexBuffer.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  PixelFormat.cpp  PropertyVisitor.cpp  SDLWindow.cpp  Shader.cpp  ShaderParser.cpp  ShaderProgram.cpp  Texture.cpp  Texture2D.cpp  VertexBuffer.cpp
engine/src/Input/: SDLInput.cpp
samples/: CMakeLists.txt
samples/1_SimpleScene/: CMakeLists.txt  FirstPersonController.hpp  FirstPersonSystem.cpp  FirstPersonSystem.hpp  imgui.ini  main.cpp
samples/1_SimpleScene/assets/scripts/: test.lua
samples/1_SimpleScene/assets/shaders/: Standard.shader
samples/2_NewTest/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  ECSTestSuite.cpp  EventTest.cpp  main.cpp
test/lib/: CMakeLists.txt
test/lib/catch2/: CMakeLists.txt
